--- a/public/css/tour/tour_responsive.css
+++ b/public/css/tour/tour_responsive.css
@@ -4468,64 +4468,91 @@
   .hot_place .list_place .item .img {
     width: 100%;
     height: unset;
-}
+  }
 
-.hot_place .list_place .item .name {
-  font-size: 3rem;
-  font-weight: 600;
-  margin-top: 2rem;
-}
+  .hot_place .list_place .item .name {
+    font-size: 3rem;
+    font-weight: 600;
+    margin-top: 2rem;
+  }
 
-.hot_place .list_place .item .desc {
-  font-size: 2.6rem;
-  font-weight: 400;
-  margin-top: 3rem;
-  line-height: 1.4;
-  display: -webkit-box;
-  overflow: hidden;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 3;
-}
+  .hot_place .list_place .item .desc {
+    font-size: 2.6rem;
+    font-weight: 400;
+    margin-top: 3rem;
+    line-height: 1.4;
+    display: -webkit-box;
+    overflow: hidden;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+  }
 
-.hot_place .list_place .item .comt {
-  font-size: 2.6rem;
-  font-weight: 400;
-  color: #757575;
-  margin-top: 2.6rem;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-} 
+  .hot_place .list_place .item .comt {
+    font-size: 2.6rem;
+    font-weight: 400;
+    color: #757575;
+    margin-top: 2.6rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
 
-.hot_place .list_place .item .comt .acc {
-  font-weight: 500;
-  margin-right: 1.6rem;
-}
+  .hot_place .list_place .item .comt .acc {
+    font-weight: 500;
+    margin-right: 1.6rem;
+  }
 
-.custom.pagination {
-  margin: 5rem 0 15rem 0 !important;
-  display: flex
-;
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
+  .custom.pagination {
+    margin: 5rem 0 15rem 0 !important;
+    display: flex;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
 
-.custom .page-link {
-  display: flex;
-  margin: 0 0.6rem;
-  padding: 0;
-  text-decoration: none;
-  color: #333;
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  transition: background-color 0.3s, color 0.3s;
-  justify-content: center;
-  align-items: center;
-  width: 4.5rem;
-  height: 4.5rem;
-}
+  .custom .page-link {
+    display: flex;
+    margin: 0 0.6rem;
+    padding: 0;
+    text-decoration: none;
+    color: #333;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    transition: background-color 0.3s, color 0.3s;
+    justify-content: center;
+    align-items: center;
+    width: 4.5rem;
+    height: 4.5rem;
+  }
 
+  .travel_info .head_list_product .input_search_box input {
+    border: none;
+    outline: none;
+    font-size: 2.6rem;
+    height: 100%;
+  }
+
+  .infographic .list_infographic {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 5.2rem 3.2rem;
+    padding-bottom: 5.8rem;
+    border-bottom: 1px solid #dbdbdb;
+  }
+
+  .infographic .list_infographic .item {
+    width: calc((100% - calc(3.2rem * 1)) / 2);
+    position: relative;
+    display: block;
+    overflow: hidden;
+  }
+
+  .infographic .list_infographic .item p {
+    font-size: 2.8rem;
+    font-weight: 500;
+    margin-top: 3.5rem;
+  }
 
 
 
