--- a/public/css/tour/tour.css
+++ b/public/css/tour/tour.css
@@ -1669,7 +1669,7 @@
 
 .content-sub-hotel-detail .room-table th,
 .room-table td {
-    padding: 23px;
+    padding: 19px;
     text-align: left;
     border: 1px solid #ddd;
     height: 0;
@@ -1915,7 +1915,7 @@
 }
 
 .content-sub-hotel-detail .card-item-sec3 {
-    padding: 32px;
+    padding: 30px;
     border: 1px solid #ccc;
     border-radius: 5px;
     margin-bottom: 32px;
@@ -1941,7 +1941,7 @@
 
 .content-sub-hotel-detail .section3 .card-item-container {
     display: flex;
-    gap: 20px;
+    gap: 30px;
 }
 
 .content-sub-hotel-detail .section3 .card-item-left {
@@ -5044,18 +5044,24 @@
     border-radius: 8px;
 }
 
+.area_info {
+    display: flex;
+    gap: 30px;
+    height: 62px;
+}
+
 .area_info .child {
     display: flex;
     align-items: center;
     gap: 10px;
-    padding: 10px 0;
+    /* padding: 10px 0; */
 }
 
 .area_info .child .icon {
     display: flex;
     align-items: center;
     gap: 5px;
-    flex-basis: 16%;
+    /* flex-basis: 16%; */
 }
 
 .area_info .pallet i {
